steps/2-deploy-yamls/yamls/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app-deployment
  labels:
    app: my-web-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
        - name: frontend
          image: quay.io/my-username/my-web-app:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
