steps/2-deploy-yamls/yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-web-app
spec:
  selector:
    app: my-web-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
